[project]
name = "rag-learn-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "google-genai>=2.6.0",
    "inngest>=0.5.18",
    "jupyter>=1.1.1",
    "llama-index-core>=0.14.22",
    "llama-index-readers-file>=0.6.0",
    "minsearch>=0.0.11",
    "openai>=2.37.0",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "requests>=2.34.2",
    "streamlit>=1.57.0",
    "uvicorn>=0.47.0",
]
